test/error/semantic/redeclaration_var.kat
func main(argc: int, argv: str) => int {
  let x: int = 1;
  let x: int = 2;
}
